unpackaged/main/default/objects/Upload_Notification__c/Upload_Notification__c.object-meta.xml
<CustomObject>
    <description>Used to notify users and customers about uploads.</description>
    <label>Upload Notification</label>
    <nameField>
        <displayFormat>ULN-{000000000}</displayFormat>
        <label>Upload Notification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Upload Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>