unpackaged/main/default/objects/Upload_Notification__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <formula>Account__r.AccountID18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Id</label>
    <type>Text</type>
</CustomField>