unpackaged/main/default/objects/Upload_Notification__c/fields/Annual_Sales__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales__c</fullName>
    <label>Annual Sales</label>
    <length>150</length>
    <type>Text</type>
</CustomField>