unpackaged/main/default/objects/Upload_Notification__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Upload Notifications</relationshipLabel>
    <relationshipName>Upload_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>