unpackaged/main/default/objects/Upload_Notification__c/fields/DLP_Milestone__c.field-meta.xml
<CustomField>
    <fullName>DLP_Milestone__c</fullName>
    <description>This field will be used to indicate what 'milestone' is associated with the customer's file on upload.</description>
    <inlineHelpText>This field will be used to indicate what 'milestone' is associated with the customer's file on upload.</inlineHelpText>
    <label>DLP Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prequal DocuSign Complete</fullName>
            </value>
            <value>
                <fullName>Prequal Bank Statements Uploaded</fullName>
            </value>
            <value>
                <fullName>Automated Bank Statement</fullName>
            </value>
            <value>
                <fullName>Driver's License Uploaded</fullName>
            </value>
            <value>
                <fullName>Voided Check Uploaded</fullName>
            </value>
            <value>
                <fullName>Prequal Application Signing Complete</fullName>
            </value>
            <value>
                <fullName>LM Automated Bank Statement</fullName>
            </value>
            <value>
                <fullName>LM Bank Statements Uploaded</fullName>
            </value>
            <value>
                <fullName>Loan Modification Questionnaire</fullName>
            </value>
            <value>
                <fullName>Email Link Clicked</fullName>
            </value>
            <value>
                <fullName>Plaid - Process Started</fullName>
            </value>
            <value>
                <fullName>Plaid - Upload Error</fullName>
            </value>
            <value>
                <fullName>Plaid - Upload Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>