unpackaged/main/default/objects/Upload_Notification__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Upload Notifications</relationshipLabel>
    <relationshipName>Upload_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>