unpackaged/main/default/objects/Upload_Notification__c/fields/Master_Detail_Link__c.field-meta.xml
<CustomField>
    <fullName>Master_Detail_Link__c</fullName>
    <formula>IF( ISPICKVAL(Lead_Or_Account__c, "Account"), 'https://nf.my.salesforce.com/' +   Account__r.Id, 
IF( ISPICKVAL(Lead_Or_Account__c, "Lead"), 'https://nf.my.salesforce.com/' +  Lead__r.Id, 
"No Upload Exists"))</formula>
    <label>Master Detail Link</label>
    <type>Text</type>
</CustomField>