unpackaged/main/default/objects/Upload_Notification__c/fields/NF_Renewal_Rep__c.field-meta.xml
<CustomField>
    <fullName>NF_Renewal_Rep__c</fullName>
    <label>NF Renewal Rep</label>
    <length>150</length>
    <type>Text</type>
</CustomField>