unpackaged/main/default/objects/Upload_Notification__c/fields/NF_Renewal_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>NF_Renewal_Rep_Email__c</fullName>
    <label>NF Renewal Rep Email</label>
    <type>Email</type>
</CustomField>