unpackaged/main/default/objects/Upload_Notification__c/fields/Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Record_Owner__c</fullName>
    <description>Record Owner on Creation</description>
    <inlineHelpText>Record Owner on Creation</inlineHelpText>
    <label>Record Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>